web: fix styling for toggle group on dark mode

--- a/web/src/authentik.css
+++ b/web/src/authentik.css
@@ -257,6 +257,12 @@ body {
     .pf-c-dropdown__toggle::before {
         border-color: transparent;
     }
+    .pf-c-toggle-group__button {
+        color: var(--ak-dark-foreground) !important;
+    }
+    .pf-c-toggle-group__button:not(.pf-m-selected) {
+        background-color: var(--ak-dark-background-light) !important;
+    }
     /* inputs help text */
     .pf-c-form__helper-text:not(.pf-m-error) {
         color: var(--ak-dark-foreground);
